@@ -1,3 +1,9 @@
+2008-08-04  Guillermo S. Romero <gsromero@infernal-iceberg.com>
+	* lisp/sawfish/wm/menus.jl: added some missing accelerators in
+	window-ops-menu as well as Move and Resize entries, issue reported
+	by Fernando Carmona Varo. Also removed tabs in the affected
+	defvar.
+
 2008-08-04  Timo Korvola  <tkorvola@svn.gnome.org>
 	* src/windows.c, src/sawmill_subrs.h, man/sawmill.texi: Rename
 	window-prop-del to window-remprop.
